[gd_scene load_steps=4 format=3 uid="uid://cpxa5h7iq7wux"]

[ext_resource type="Script" path="res://scripts/gameplay/projectile.gd" id="1_ak1pj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wmogd"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md8ra"]
size = Vector2(16.5, 15)

[node name="Projectile" type="Area2D"]
collision_mask = 3
script = ExtResource("1_ak1pj")
speed = 300.0

[node name="AnimSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wmogd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_md8ra")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_looped" from="AnimSprite" to="." method="_on_anim_sprite_animation_looped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
